...

  List<String> genderList = [
  'Masculino',
  'Feminino',
  'Outros',
...
                    child: SafeArea(
                      child: SingleChildScrollView(
                        key: Key('ScrollCadastro'),
                        physics: AlwaysScrollableScrollPhysics(),
                        padding: EdgeInsets.symmetric(
...
                                    (value) {
                                      if (value == null || value.isEmpty) {
                                        return 'O e-mail é um campo obrigatório';
                                      } else if (!isEmail(value)) {
                                        return 'Insira um e-mail válido';
                                      } else {
                                        return null;
...
                                    (value) {
                                      if (value == null || value.isEmpty) {
                                        return 'O nome é um campo obrigatório';
                                      } else if (!nameExp.hasMatch(value)) {
                                        return 'Insira um nome válido (a-z A-Z)';
...
                                        (value) {
                                      if (value == null || value.isEmpty) {
                                        return 'O sobrenome é um campo obrigatório';
                                      } else if (!nameExp.hasMatch(value)) {
                                        return 'Insira um sobrenome válido (a-z A-Z)';
...
                                        return 'O telefone é um campo obrigatório';
                                      } else if (!(Util.sanitizePhone(value).length == 10 || Util.sanitizePhone(value).length == 11)) {
                                        return 'Número de telefone inválido';
                                      } else {
                                        return null;
...
                                    Center(
                                      child: DropdownButtonFormField<String>(
                                        key: Key("dropgenero"),
                                        value: _dropdownValueSexo,
                                        validator: (value) {
                                          if (value == null || value.isEmpty) {
                                            return 'O gênero é um campo obrigatório';
                                          } else {
                                            return null;
...
                                    (value) {
                                      if (_birthController.text.isEmpty) {
                                        return 'A data é um campo obrigatório';
                                      } else {
                                        return null;
...
                                        (value) {
                                      if (value == null || value.isEmpty) {
                                        return 'A senha é um campo obrigatório';
                                      } else if (value.length < 8) {
                                        return 'A senha é muito curta';
...
                                                  .showSnackBar(
                                                SnackBar(
                                                  content: Text('Email ou Telefone já existem no sistema! (400)'),
                                                  backgroundColor: Colors.red,
                                                ),
...
                                      },
                                      child: Text(
                                        'CADASTRAR',
                                        style: TextStyle(
                                          color: CustomColors.orangePrimary,
...
